--- a/powermart-backend/package.json
+++ b/powermart-backend/package.json
@@ -21,7 +21,9 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "prisma": "^7.0.1",
