added verification code for email and sms

--- a/powermart-backend/.gitignore
+++ b/powermart-backend/.gitignore
@@ -15,6 +15,10 @@ build/
 
 # Prisma generated client (can always be regenerated)
 prisma/generated/
+
+# WhatsApp session (contains sensitive auth credentials)
+whatsapp-session/
+
 # Environment & local config
 .env
 .env.*
