--- a/powermart-backend/.env.example
+++ b/powermart-backend/.env.example
@@ -2,6 +2,10 @@
 # PowerMart Backend Environment Variables
 # ===========================================
 
+# Application
+APP_NAME="PowerMart"
+FRONTEND_URL="http://localhost:3000"
+
 # Database
 DATABASE_URL="postgresql://user:password@localhost:5432/powermart?schema=public"
 
@@ -12,6 +16,39 @@ JWT_EXPIRES_IN="7d"
 # Server Configuration
 PORT=3000
 NODE_ENV="development"
+
+# ===========================================
+# Email Configuration (Nodemailer SMTP)
+# ===========================================
+# For Gmail, use:
+#   SMPT_HOST=smtp.gmail.com
+#   SMPT_PORT=465
+#   SMPT_MAIL=your-email@gmail.com
+#   SMPT_PASSWORD=your-app-password (not regular password)
+#
+# For other providers, check their SMTP settings
+
+SMPT_HOST="smtp.gmail.com"
+SMPT_PORT="465"
+SMPT_MAIL="your-email@gmail.com"
+SMPT_PASSWORD="your-app-password"
+
+# ===========================================
+# WhatsApp Configuration (Self-hosted - FREE)
+# ===========================================
+# Uses Baileys library - WhatsApp Web protocol
+# No API keys or paid services needed!
+#
+# First-time setup:
+# 1. Start the server: npm run dev
+# 2. Scan QR code shown in terminal with WhatsApp
+# 3. Session is saved in ./whatsapp-session/
+# 4. Subsequent starts will auto-connect
+#
+# Security:
+# - Session files contain auth credentials
+# - ./whatsapp-session/ is in .gitignore
+# - Keep session folder secure in production
 
 # ===========================================
 # Cloudinary Configuration
