--- a/powermart-backend/package.json
+++ b/powermart-backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@whiskeysockets/baileys": "^7.0.0-rc.9",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
     "dotenv": "^17.2.3",
@@ -20,7 +21,10 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "pg": "^8.16.3"
+    "nodemailer": "^7.0.11",
+    "pg": "^8.16.3",
+    "qrcode-terminal": "^0.12.0",
+    "twilio": "^5.10.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -28,7 +32,9 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.6",
+    "@types/qrcode-terminal": "^0.12.2",
     "prisma": "^7.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
